# Lab_fogliocalcolo

./: .gitignore  CMakeLists.txt  Cella.h  CellaFormula.h  CellaMassimo.h  CellaMedia.h  CellaMinimo.h  CellaSomma.h  CellaValore.h  FoglioCalcolo.h  Observer.h  Subject.h  intitled43  main.cpp
Test/: CMakeLists.txt  CelleFixture.cpp  TestMedia.cpp  runAllTests.cpp
