cmake_minimum_required(VERSION 3.12)
set(GOOGLETEST_VERSION 1.15.2)
add_subdirectory(./lib/googletest)
#project(Test)
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include
                    ${gtest_SOURCE_DIR})
set(SOURCE_TEST_FILES runAllTests.cpp TestMedia.cpp TestMassimo.cpp TestMinimo.cpp TestSomma.cpp CelleFixture.cpp)
add_executable(runCellsTest ${SOURCE_TEST_FILES})
target_link_libraries(runCellsTest core gtest gtest_main)